[tool.poetry]
name = "panda-puts"
version = "0.1.0"
description = ""
authors = ["Max Bussiere <max@3digit.dev>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
bullet = "^2.2.0"
rich = "^9.10.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pp = "panda_puts.main:main"